--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 authors = ["Daniel Stiner <daniel.stiner@gmail.com>"]
 name = "uhid-example"
 version = "0.1.0"
+
 [dependencies]
 libc = "0.2.28"
 mio = "0.6.9"
 nix = "0.9.0"
 termios = "0.2.2"
+
+[build-dependencies]
+bindgen = "0.29.0"
